# SHARPpy-Reimagined-vRust

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  hrrr_extract.py  installation.txt  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
docs/: ECAPE_RUST_VALIDATION.md  NATIVE_PARITY.md  USAGE.md  sounding_parameter_guide.md
native/patches/: sharppyrs-ecape-el.patch  sharppyrs-sharppy-parity.patch
native/sharpmod-native/: Cargo.toml
native/sharpmod-native/src/: lib.rs  precip_compat.rs
packaging/: install_native_extension.py  make_icon.py  sharpmod_gui.spec  sharpmod_gui_launcher.py
sharpmod/: _version.py  colors.py  gui.py  gui_common.py  gui_compare.py  gui_picker.py  gui_viewer.py  gui_workers.py  hrrr_zarr.py  render.py  sessions.py
sharpmod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sharpmod/io/: decoder.py  tls.py  uwyo_catalog.py  uwyo_decoder.py
sharpmod/sharpmod.egg-info/: PKG-INFO  requires.txt  top_level.txt
sharpmod/sharptab/: constants.py  derived.py  ecape.py  native.py  native_analysis.py  native_ecape.py  native_profile.py  params.py  profile.py  sars_cache.py
sharpmod/tests/: test_backend_selection.py  test_decoders.py  test_derived_decoder_agnostic_property.py  test_derived_masking_isolation_property.py  test_derived_spc_composites.py  test_ecape_rust_parity.py  test_gui_environment_and_lifecycle.py  test_gui_module_boundaries.py  test_gui_multi_sounding.py  test_gui_rust_python_compare.py  test_gui_vrust_interactions.py  test_hrrr_zarr.py  test_inset_layout.py  (+24 more)
(+16 files in other folders)
