[package]
name = "sharpmod-native"
version = "0.3.2"
edition = "2024"
license = "BSD-3-Clause"
description = "Bulk native sounding-analysis bridge for SHARPpy Reimagined vRust"

[lib]
name = "sharpmod_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
sharppyrs = { path = "../sharppyrs" }
ecape-rs = { git = "https://github.com/FahrenheitResearch/ecape-rs", rev = "414cac67ce1ce4bff64c7c74449ed4ccddb3ebc0" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
